crates/kyzo-core/tests/compile_fail/tag_ordered_score_refused.stderr
error[E0425]: cannot find type `TagOrdered` in crate `kyzo`
  --> tests/compile_fail/tag_ordered_score_refused.rs:16:23
   |
16 |     let _score: kyzo::TagOrdered = loop {};
   |                       ^^^^^^^^^^ not found in `kyzo`
